# Task1

./: .gitignore  README.md  class_func.py  connector.py  pyproject.toml  requests.py
