[project]
name = "task1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "gcloud (>=0.18.3,<0.19.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "google-api-python-client (>=2.197.0,<3.0.0)",
    "google-auth-httplib2 (>=0.4.0,<0.5.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false